<resources>
    <string name="app_name">VoiceRecorder</string>
    <string name="title_records">Records</string>
    <string name="title_home">Home</string>
    <string name="title_editor">Editor</string>
    <string name="start_using">Start using</string>
    <string name="greeting_message">This is the voice recorder app for Android. In this application you can record your voice and listen to it anytime.</string>
    <string name="hello">Hello</string>
    <string name="start_recording">Start Recording</string>
    <string name="save_name">Save_00.00.0000_00-00-00</string>
    <string name="record_current_time">00:00</string>
    <string name="record_time">00:00</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="color_theme">Color Theme</string>
    <string name="language">Language</string>
    <string name="font">Font</string>
    <string name="changed">Changed</string>
    <string name="colon">:</string>
    <string name="something_informative">Something informative</string>
    <string name="length">Length</string>
    <string name="size">Size</string>
    <string name="speed">Speed</string>
    <string name="sample_number">0</string>
    <string name="pitch">Pitch</string>
    <string name="debug">Debug</string>
    <string name="audioFormat">.m4a</string>
    <string name="title">Title</string>
</resources>