<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.wafphlez.voicerecorder.ui.records.RecordsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wafphlez.voicerecorder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wafphlez.voicerecorder.ui.editor.EditorFragment"
        android:label="@string/title_editor"
        tools:layout="@layout/fragment_editor" />
</navigation>