<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.EditorFragment">

    <TextView
        android:id="@+id/text_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        tools:text="Editor" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_editor"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/saveName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_name"
                android:textColor="?colorPrimary"
                android:layout_marginHorizontal="5dp"
                android:textSize="16sp"/>
            <ImageButton
                android:id="@+id/editName"
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:background="@drawable/ic_pencil"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <com.wafphlez.voicerecorder.PlayerVisualizerView
            android:layout_width="match_parent"
            android:id="@+id/visualizer"
            android:layout_margin="10dp"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/record_background"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changed" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/dateChanged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/something_informative" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/something_informative" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/something_informative" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/record_background"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:textColor="@color/dark_grey"/>

                <TextView
                    android:id="@+id/volumeSliderValue"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_number"
                    android:layout_marginStart="10dp"/>
                
                <SeekBar
                    android:id="@+id/volumeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="?colorPrimary"
                    android:progressTint="#00ffffff"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:max="20"
                    android:progress="10"
                    android:thumb="@drawable/thumb_image"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pitch"
                    android:textColor="@color/dark_grey"/>

                <TextView
                    android:id="@+id/pitchSliderValue"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_number"
                    android:layout_marginStart="10dp"/>

                <SeekBar
                    android:id="@+id/pitchSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:thumbTint="?colorPrimary"
                    android:progressTint="#00ffffff"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:max="20"
                    android:progress="10"
                    android:thumb="@drawable/thumb_image"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nextAudioVizualizer"
            android:text="@string/debug"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>